--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -1,1 +1,7 @@
-HEADER
+
+	<div class="pull-right" data-ng-controller="authCtrl">		
+		<button ng-hide="status.log" type="button" class="btn btn-default navbar-btn" ng-click="login()">Logar com Facebook</button> 
+		<p ng-show="status.log" class="navbar-text">
+			Olá, {{status.name}} | <a href="javascript:void(0);" class="navbar-link" ng-click="logout()">logout</a>
+		</p>
+	</div>
