--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -73,6 +73,10 @@
     //geral
     html, body{margin:0; padding:0;}
 
+    #header{
+        .clearfix();
+    }
+
     #container-map{height:700px;}
 
     /*.dir{position:absolute; z-index:100; right:0; top:50px; width:100px; height:40px; padding:0 20px; background:#fff; overflow:hidden;}
