--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -50,7 +50,7 @@ button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 textarea{overflow:auto;vertical-align:top;}
 table{border-collapse:collapse;border-spacing:0;}
 html,button,input,select,textarea{color:#222;}
-body{font-size:1em;line-height:1.4;}
+body{line-height:1.4;}
 ::-moz-selection{background:#b3d4fc;text-shadow:none;}
 ::selection{background:#b3d4fc;text-shadow:none;}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0;}
