--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -14,7 +14,7 @@
 
 <div data-ng-controller="MapCtrl">
 	
-	HOME
+	HOME AUTH
 	<div data-draw-map></div>
 
 
@@ -34,6 +34,7 @@
                 <table class="table table-striped table-hover table-condensed">
                     <thead>
                         <tr>
+                            <th>#</th>
                             <th>Nome</th>
                             <th>Editar</th>
                             <th>Remover</th>
@@ -41,6 +42,7 @@
                     </thead>
                     <tbody>
                         <tr data-ng-repeat="place in dataList">
+                            <td>{{$index}}</td>
                             <td>{{place.name}}</td>
                             <td><button class="btn btn-default btn-xs" type="button" data-ng-click="edit({id:place.id, position:place.position, name:place.name, address:place.address, url:place.url})">Editar</button></td>
                             <td><button class="btn btn-danger btn-xs" type="button" data-ng-click="delete(place.id)">Remover</button></td>
