Adicionado o campo category nas atrações.

--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -36,6 +36,7 @@
                         <tr>
                             <th>#</th>
                             <th>Nome</th>
+                            <th>Tipo</th>
                             <th>Editar</th>
                             <th>Remover</th>
                         </tr>
@@ -45,7 +46,8 @@
                             <!-- <td>{{place}}</td> -->
                             <td>{{$index +1}}</td>
                             <td>{{place.name}}</td>
-                            <td><button class="btn btn-default btn-xs" type="button" data-ng-click="edit({id:place.id, position:place.position, name:place.name, address:place.address, url:place.url})">Editar</button></td>
+                            <td>{{placeData.category[place.category].type}}</td>
+                            <td><button class="btn btn-default btn-xs" type="button" data-ng-click="edit({id:place.id, position:place.position, name:place.name, address:place.address, category:place.category, url:place.url})">Editar</button></td>
                             <td><button class="btn btn-danger btn-xs" type="button" data-ng-click="delete(place.id)">Remover</button></td>
                         </tr>
                     </tbody>
@@ -70,6 +72,12 @@
                             <input class="form-control" type="text" name="position" value="{{dataPlace.position}}" data-ng-model="dataPlace.position">
                         </div>
                         
+                        <div class="form-group">
+                            <label class="control-label">Tipo</label>
+                            <select class="form-control" name="type" data-ng-model="dataPlace.category" data-ng-options="category.id as category.type for (key, category) in placeData.category" data-ng-change=""></select>
+                            <!-- fazer funcionar o filtro " | orderBy:category.type" no data-ng-options -->
+                        </div>
+                        
                         <!-- <div class="form-group">
                             <label class="control-label">Latitude</label>
                             <input class="form-control" type="text" name="lat" value="{{dataPlace.lat}}" data-ng-model="dataPlace.lat">
@@ -87,8 +95,8 @@
 
                         <div class="pull-right">
                             <button class="btn btn-default" type="button" data-ng-click="cancel()">Cancelar</button>        
-                            <button class="btn btn-primary" type="button" data-ng-show="dataPlace.$edit" data-ng-disabled="formPlace.$invalid" data-ng-click="submitEdit({id:dataPlace.id, position:dataPlace.position, name:dataPlace.name, address:dataPlace.address, url:dataPlace.url})">Editar</button>
-                            <button class="btn btn-primary" type="button" data-ng-hide="dataPlace.$edit" data-ng-disabled="formPlace.$invalid" data-ng-click="submitNew({id:dataPlace.id, position:dataPlace.position, name:dataPlace.name, address:dataPlace.address, url:dataPlace.url})">Salvar</button>                                
+                            <button class="btn btn-primary" type="button" data-ng-show="dataPlace.$edit" data-ng-disabled="formPlace.$invalid" data-ng-click="submitEdit({id:dataPlace.id, position:'', name:dataPlace.name, address:dataPlace.address, category:dataPlace.category, url:dataPlace.url})">Editar</button>
+                            <button class="btn btn-primary" type="button" data-ng-hide="dataPlace.$edit" data-ng-disabled="formPlace.$invalid" data-ng-click="submitNew({id:dataPlace.id, position:dataPlace.position, name:dataPlace.name, address:dataPlace.address, category:dataPlace.category, url:dataPlace.url})">Salvar</button>                                
                         </div>
                         
                         
