Removidos os arquivos .less e adicionados arquivos .scss que já estão configurados na aplicação.

--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -3,6 +3,7 @@
 <!-- <img src="https://graph.facebook.com/100002807237878/picture?type=small"> -->
 <!-- <img src="https://graph.facebook.com/100002807237878/picture?type=square"> -->
 
+<div class="sprite-bt_site">aaa</div>
 
 	<div class="pull-right" data-ng-controller="authCtrl">		
 		<button ng-hide="user.uid" type="button" class="btn btn-default navbar-btn" ng-click="login()">Logar com Facebook</button> 
