--- a/app/views/home-auth.html
+++ b/app/views/home-auth.html
@@ -51,7 +51,7 @@
                             <!-- <td>{{place}}</td> -->
                             <td>{{$index +1}}</td>
                             <td>{{place.name}}</td>
-                            <td>{{placeData.category[place.category].type}}</td>
+                            <td>{{placeCategories.category[place.category].type}}</td>
                             <td><button class="btn btn-default btn-xs" type="button" data-ng-click="edit({id:place.id, $address:place.address, position:place.position, name:place.name, address:place.address, category:place.category, url:place.url})">Editar</button></td>
                             <td><button class="btn btn-danger btn-xs" type="button" data-ng-click="delete(place.id)">Remover</button></td>
                         </tr>
@@ -80,7 +80,7 @@
                         
                         <div class="form-group">
                             <label class="control-label">Tipo</label>
-                            <select class="form-control" name="type" data-ng-model="dataPlace.category" data-ng-options="category.id as category.type for (key, category) in placeData.category | toArray | orderBy:'type'" data-ng-change=""></select>
+                            <select class="form-control" name="type" data-ng-model="dataPlace.category" data-ng-options="category.id as category.type for (key, category) in placeCategories.category | toArray | orderBy:'type'" data-ng-change=""></select>
                         </div>
                         
                         <!-- <div class="form-group">
