Ajustado controller para mostrar o nome do usuário no cabeçalho.

--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -25,7 +25,7 @@
 		
 
 		<p ng-show="user.uid" class="navbar-text">
-			Olá, {{dataList}} | <a href="javascript:void(0);" class="navbar-link" ng-click="logout()">logout</a>
+			Olá, {{user.name}} | <a href="javascript:void(0);" class="navbar-link" ng-click="logout()">logout</a>
 		</p>
 	</div>
 
